assigned tracker explosion effect. Fixed barrel collision channel blocking.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -47,7 +47,7 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.25-04.43.23
+CoopGame.TimeStamp=2020.04.25-13.42.51
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -3063,9 +3063,13 @@ MaterialExpressionSubtract.MaterialExpression=True
 MaterialExpressionOneMinus.MaterialExpression=True
 MaterialExpressionPower.MaterialExpressionPower=True
 MaterialExpressionPower.MaterialExpression=True
+BP_TrackerBot_C.HealthComponent=True
+BP_TrackerBot_C.Activation=True
+BP_TrackerBot_C.Destruction=True
+REINST_BP_TrackerBot_C_35.Destruction=True
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [RootWindow]
@@ -3287,8 +3291,8 @@ Volume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Obje
 Brush="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 WBP_HealthIndicator_C="\"Object.Appearance.ColorAndOpacity\" "
 UserWidget="\"Object.Appearance.ColorAndOpacity\" "
-BP_ExplosiveBarrel_C="\"Object.Components.mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-SExplosiveBarrel="\"Object.Components.mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+BP_ExplosiveBarrel_C=
+SExplosiveBarrel=
 REINST_BP_ExplosiveBarrel_C_33=
 CapsuleComponent="\"Object.Collision.BodyInstance\" "
 ShapeComponent="\"Object.Collision.BodyInstance\" "
@@ -3303,10 +3307,10 @@ REINST_BP_PlayerPawn_C_35="\"Object.Character.Mesh.Object.Collision.BodyInstance
 REINST_BP_PlayerPawn_C_39="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 REINST_BP_PlayerPawn_C_43="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 REINST_BP_PlayerPawn_C_48="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-REINST_BP_ExplosiveBarrel_C_35="\"Object.Components.mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+REINST_BP_ExplosiveBarrel_C_35=
 NavMeshBoundsVolume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BP_TrackerBot_C=
-STrackerBot=
+STrackerBot="\"Object.Components.meshComp.Object.Lighting.LightmassSettings\" \"Object.Components.meshComp.Object.Lighting.LightingChannels\" \"Object.Components.meshComp.Object.Collision.BodyInstance\" "
 REINST_BP_TrackerBot_C_56="\"Object.Components.meshComp.Object.Lighting.LightmassSettings\" \"Object.Components.meshComp.Object.Lighting.LightingChannels\" \"Object.Components.meshComp.Object.Collision.BodyInstance\" "
 MaterialExpressionVectorParameter="\"Object.DefaultValue\" "
 MaterialExpressionParameter="\"Object.DefaultValue\" "
@@ -3314,6 +3318,7 @@ MaterialExpression=
 REINST_BP_TrackerBot_C_53="\"Object.Components.meshComp.Object.Lighting.LightmassSettings\" \"Object.Components.meshComp.Object.Lighting.LightingChannels\" \"Object.Components.meshComp.Object.Collision.BodyInstance\" "
 REINST_BP_TrackerBot_C_35="\"Object.Components.meshComp.Object.Lighting.LightmassSettings\" \"Object.Components.meshComp.Object.Lighting.LightingChannels\" \"Object.Components.meshComp.Object.Collision.BodyInstance\" "
 MaterialExpressionScalarParameter="\"Object.DefaultValue\" "
+REINST_BP_ExplosiveBarrel_C_47="\"Object.Components.mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 
 [PlacementMode]
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
@@ -3333,17 +3338,17 @@ RecentlyPlaced=/Game/Blueprints/BP_TargetDummy.BP_TargetDummy;
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Blueprints/Characters/BP_PlayerPawn
-MRUItem1=/Game/Meshes/AI/TrackerBot/M_TrackerBot
-MRUItem2=/Engine/EngineMaterials/T_Default_Material_Grid_M
+MRUItem1=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
+MRUItem2=/Game/Blueprints/Weapons/BP_Rifle
 MRUItem3=/Game/Blueprints/AI/BP_TrackerBot
-MRUItem4=/Game/Meshes/SM_TrackerBot
-MRUItem5=/Game/Meshes/ArcadeEditorSphereScaled
-MRUItem6=/Game/UI/WBP_HealthIndicator
-MRUItem7=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
-MRUItem8=/Game/Blueprints/Projectiles/BP_GrenadeProjectile
-MRUItem9=/Game/UI/WBP_AmmoInfo
-MRUItem10=/Game/Blueprints/Weapons/BP_Shotgun
-MRUItem11=/Game/Blueprints/Weapons/BP_Rifle
+MRUItem4=/Game/Meshes/AI/TrackerBot/M_TrackerBot
+MRUItem5=/Engine/EngineMaterials/T_Default_Material_Grid_M
+MRUItem6=/Game/Meshes/SM_TrackerBot
+MRUItem7=/Game/Meshes/ArcadeEditorSphereScaled
+MRUItem8=/Game/UI/WBP_HealthIndicator
+MRUItem9=/Game/Blueprints/Projectiles/BP_GrenadeProjectile
+MRUItem10=/Game/UI/WBP_AmmoInfo
+MRUItem11=/Game/Blueprints/Weapons/BP_Shotgun
 MRUItem12=/Game/Blueprints/GameModes/BP_TestGameMode
 MRUItem13=/Game/UI/WBP_SimpleCrosshair
 MRUItem14=/Game/Materials/M_ExplosiveBarrel
