Now the tracker bot initiates a self destruct sequence when overlapping with a pawn.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -26,6 +26,9 @@ MultipleInstancePositions=(X=315,Y=163)
 MultipleInstancePositions=(X=0,Y=0)
 MultipleInstancePositions=(X=672,Y=0)
 MultipleInstancePositions=(X=0,Y=512)
+LastExecutedPlayModeType=PlayMode_InEditorFloating
+PlayNetDedicated=True
+PlayNumberOfClients=2
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 SnapToSurface=(bEnabled=False,SnapOffsetExtent=0.000000,bSnapRotation=True)
@@ -47,7 +50,7 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.25-13.42.51
+CoopGame.TimeStamp=2020.04.25-13.53.36
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -3067,9 +3070,23 @@ BP_TrackerBot_C.HealthComponent=True
 BP_TrackerBot_C.Activation=True
 BP_TrackerBot_C.Destruction=True
 REINST_BP_TrackerBot_C_35.Destruction=True
+REINST_BP_GrenadeProjectile_C_43.Variable=True
+REINST_BP_GrenadeProjectile_C_43.Sockets=True
+REINST_BP_GrenadeProjectile_C_43.ProjectileBounces=True
+REINST_BP_GrenadeProjectile_C_43.ProjectileSimulation=True
+REINST_BP_GrenadeProjectile_C_43.Homing=True
+REINST_BP_GrenadeProjectile_C_43.ProjectileInterpolation=True
+REINST_BP_GrenadeProjectile_C_43.Velocity=True
+REINST_BP_GrenadeProjectile_C_43.PlanarMovement=True
+REINST_BP_GrenadeProjectile_C_43.MovementComponent=True
+REINST_BP_GrenadeProjectile_C_43.Tags=True
+REINST_BP_GrenadeProjectile_C_43.ComponentReplication=True
+REINST_BP_GrenadeProjectile_C_43.Activation=True
+REINST_BP_GrenadeProjectile_C_43.Cooking=True
+REINST_BP_GrenadeProjectile_C_43.Events=True
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [RootWindow]
@@ -3103,7 +3120,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Projectiles
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -3310,7 +3327,7 @@ REINST_BP_PlayerPawn_C_48="\"Object.Character.Mesh.Object.Collision.BodyInstance
 REINST_BP_ExplosiveBarrel_C_35=
 NavMeshBoundsVolume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BP_TrackerBot_C=
-STrackerBot="\"Object.Components.meshComp.Object.Lighting.LightmassSettings\" \"Object.Components.meshComp.Object.Lighting.LightingChannels\" \"Object.Components.meshComp.Object.Collision.BodyInstance\" "
+STrackerBot=
 REINST_BP_TrackerBot_C_56="\"Object.Components.meshComp.Object.Lighting.LightmassSettings\" \"Object.Components.meshComp.Object.Lighting.LightingChannels\" \"Object.Components.meshComp.Object.Collision.BodyInstance\" "
 MaterialExpressionVectorParameter="\"Object.DefaultValue\" "
 MaterialExpressionParameter="\"Object.DefaultValue\" "
@@ -3337,16 +3354,16 @@ RecentlyPlaced=/Game/Weapons/Effects/BasicTracer/P_SmokeTrail.P_SmokeTrail;
 RecentlyPlaced=/Game/Blueprints/BP_TargetDummy.BP_TargetDummy;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Characters/BP_PlayerPawn
-MRUItem1=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
-MRUItem2=/Game/Blueprints/Weapons/BP_Rifle
-MRUItem3=/Game/Blueprints/AI/BP_TrackerBot
-MRUItem4=/Game/Meshes/AI/TrackerBot/M_TrackerBot
-MRUItem5=/Engine/EngineMaterials/T_Default_Material_Grid_M
-MRUItem6=/Game/Meshes/SM_TrackerBot
-MRUItem7=/Game/Meshes/ArcadeEditorSphereScaled
-MRUItem8=/Game/UI/WBP_HealthIndicator
-MRUItem9=/Game/Blueprints/Projectiles/BP_GrenadeProjectile
+MRUItem0=/Game/Blueprints/Projectiles/BP_GrenadeProjectile
+MRUItem1=/Game/Blueprints/Characters/BP_PlayerPawn
+MRUItem2=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
+MRUItem3=/Game/Blueprints/Weapons/BP_Rifle
+MRUItem4=/Game/Blueprints/AI/BP_TrackerBot
+MRUItem5=/Game/Meshes/AI/TrackerBot/M_TrackerBot
+MRUItem6=/Engine/EngineMaterials/T_Default_Material_Grid_M
+MRUItem7=/Game/Meshes/SM_TrackerBot
+MRUItem8=/Game/Meshes/ArcadeEditorSphereScaled
+MRUItem9=/Game/UI/WBP_HealthIndicator
 MRUItem10=/Game/UI/WBP_AmmoInfo
 MRUItem11=/Game/Blueprints/Weapons/BP_Shotgun
 MRUItem12=/Game/Blueprints/GameModes/BP_TestGameMode
