added sound when self destruction sequence is initiated and when the tracker explodes.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -48,7 +48,7 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.25-14.42.42
+CoopGame.TimeStamp=2020.04.25-14.44.06
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -3082,6 +3082,10 @@ REINST_BP_GrenadeProjectile_C_43.ComponentReplication=True
 REINST_BP_GrenadeProjectile_C_43.Activation=True
 REINST_BP_GrenadeProjectile_C_43.Cooking=True
 REINST_BP_GrenadeProjectile_C_43.Events=True
+BP_TrackerBot_C.Shape=True
+BP_TrackerBot_C.Navigation=True
+BP_TrackerBot_C.Overlapping=True
+REINST_BP_TrackerBot_C_35.Overlapping=True
 
 [AssetEditorManager]
 CleanShutdown=False
@@ -3261,7 +3265,7 @@ Object=
 BP_PlayerPawn_C="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SCharacter="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 Character="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-Pawn="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+Pawn="\"Object.Components.meshComp.Object.Lighting.LightmassSettings\" \"Object.Components.meshComp.Object.Lighting.LightingChannels\" \"Object.Components.meshComp.Object.Collision.BodyInstance\" "
 REINST_BP_PlayerPawn_C_34="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
@@ -3324,8 +3328,8 @@ REINST_BP_PlayerPawn_C_43="\"Object.Character.Mesh.Object.Collision.BodyInstance
 REINST_BP_PlayerPawn_C_48="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 REINST_BP_ExplosiveBarrel_C_35=
 NavMeshBoundsVolume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-BP_TrackerBot_C=
-STrackerBot=
+BP_TrackerBot_C="\"Object.Components.meshComp.Object.Lighting.LightmassSettings\" \"Object.Components.meshComp.Object.Lighting.LightingChannels\" \"Object.Components.meshComp.Object.Collision.BodyInstance\" "
+STrackerBot="\"Object.Components.meshComp.Object.Lighting.LightmassSettings\" \"Object.Components.meshComp.Object.Lighting.LightingChannels\" \"Object.Components.meshComp.Object.Collision.BodyInstance\" "
 REINST_BP_TrackerBot_C_56="\"Object.Components.meshComp.Object.Lighting.LightmassSettings\" \"Object.Components.meshComp.Object.Lighting.LightingChannels\" \"Object.Components.meshComp.Object.Collision.BodyInstance\" "
 MaterialExpressionVectorParameter="\"Object.DefaultValue\" "
 MaterialExpressionParameter="\"Object.DefaultValue\" "
@@ -3352,26 +3356,26 @@ RecentlyPlaced=/Game/Weapons/Effects/BasicTracer/P_SmokeTrail.P_SmokeTrail;
 RecentlyPlaced=/Game/Blueprints/BP_TargetDummy.BP_TargetDummy;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Projectiles/BP_GrenadeProjectile
+MRUItem0=/Game/TrackerBot/BP_TrackerBot
 MRUItem1=/Game/Blueprints/Characters/BP_PlayerPawn
-MRUItem2=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
-MRUItem3=/Game/Blueprints/Weapons/BP_Rifle
-MRUItem4=/Game/Blueprints/AI/BP_TrackerBot
-MRUItem5=/Game/Meshes/AI/TrackerBot/M_TrackerBot
-MRUItem6=/Engine/EngineMaterials/T_Default_Material_Grid_M
-MRUItem7=/Game/Meshes/SM_TrackerBot
-MRUItem8=/Game/Meshes/ArcadeEditorSphereScaled
-MRUItem9=/Game/UI/WBP_HealthIndicator
-MRUItem10=/Game/UI/WBP_AmmoInfo
-MRUItem11=/Game/Blueprints/Weapons/BP_Shotgun
-MRUItem12=/Game/Blueprints/GameModes/BP_TestGameMode
-MRUItem13=/Game/UI/WBP_SimpleCrosshair
-MRUItem14=/Game/Materials/M_ExplosiveBarrel
-MRUItem15=/Game/Materials/SM_ExplosiveBarrel
-MRUItem16=/Game/UI/M_HealthIndicator
-MRUItem17=/Game/UI/T_HealthMask
-MRUItem18=/Game/lessCineMat
-MRUItem19=/Game/NewMaterialInstanceConstant
+MRUItem2=/Game/Blueprints/Projectiles/BP_GrenadeProjectile
+MRUItem3=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
+MRUItem4=/Game/Blueprints/Weapons/BP_Rifle
+MRUItem5=/Game/Blueprints/AI/BP_TrackerBot
+MRUItem6=/Game/Meshes/AI/TrackerBot/M_TrackerBot
+MRUItem7=/Engine/EngineMaterials/T_Default_Material_Grid_M
+MRUItem8=/Game/Meshes/SM_TrackerBot
+MRUItem9=/Game/Meshes/ArcadeEditorSphereScaled
+MRUItem10=/Game/UI/WBP_HealthIndicator
+MRUItem11=/Game/UI/WBP_AmmoInfo
+MRUItem12=/Game/Blueprints/Weapons/BP_Shotgun
+MRUItem13=/Game/Blueprints/GameModes/BP_TestGameMode
+MRUItem14=/Game/UI/WBP_SimpleCrosshair
+MRUItem15=/Game/Materials/M_ExplosiveBarrel
+MRUItem16=/Game/Materials/SM_ExplosiveBarrel
+MRUItem17=/Game/UI/M_HealthIndicator
+MRUItem18=/Game/UI/T_HealthMask
+MRUItem19=/Game/lessCineMat
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
@@ -3420,6 +3424,7 @@ MRUItem19=/Game/NewMaterialInstanceConstant
 /Game/Blueprints/Projectiles/BP_GrenadeProjectile.BP_GrenadeProjectile=0
 /Game/Meshes/ArcadeEditorSphereScaled.ArcadeEditorSphereScaled=0
 /Engine/EngineMaterials/T_Default_Material_Grid_M.T_Default_Material_Grid_M=0
+/Game/TrackerBot/BP_TrackerBot.BP_TrackerBot=0
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
