Sound effects attenuated.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -3086,10 +3086,32 @@ BP_TrackerBot_C.Shape=True
 BP_TrackerBot_C.Navigation=True
 BP_TrackerBot_C.Overlapping=True
 REINST_BP_TrackerBot_C_35.Overlapping=True
+SoundAttenuation.AttenuationDistance=True
+SoundAttenuation.AttenuationSpatialization=True
+SoundAttenuation.AttenuationAirAbsorption=True
+SoundAttenuation.AttenuationListenerFocus=True
+SoundAttenuation.AttenuationOcclusion=True
+SoundCue.Attenuation=True
+SoundCue.AttenuationDistance=True
+SoundCue.Culling=True
+SoundCue.AttenuationSpatialization=True
+SoundCue.AttenuationAirAbsorption=True
+SoundCue.Sound=True
+SoundCue.AttenuationListenerFocus=True
+SoundCue.AttenuationOcclusion=True
+SoundCue.Subtitles=True
+SoundCue.Debug=True
+SoundCue.Concurrency=True
+SoundCue.Effects=True
+SoundCue.Priority=True
+SoundCue.Info=True
+SoundNodeWavePlayer.WavePlayer=True
 
 [AssetEditorManager]
 CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/TrackerBot/Sounds/explodewarning_Cue.explodewarning_Cue
+OpenAssetsAtExit=/Game/TrackerBot/Sounds/Explosion01_Cue.Explosion01_Cue
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -3356,26 +3378,26 @@ RecentlyPlaced=/Game/Weapons/Effects/BasicTracer/P_SmokeTrail.P_SmokeTrail;
 RecentlyPlaced=/Game/Blueprints/BP_TargetDummy.BP_TargetDummy;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/TrackerBot/BP_TrackerBot
-MRUItem1=/Game/Blueprints/Characters/BP_PlayerPawn
-MRUItem2=/Game/Blueprints/Projectiles/BP_GrenadeProjectile
-MRUItem3=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
-MRUItem4=/Game/Blueprints/Weapons/BP_Rifle
-MRUItem5=/Game/Blueprints/AI/BP_TrackerBot
-MRUItem6=/Game/Meshes/AI/TrackerBot/M_TrackerBot
-MRUItem7=/Engine/EngineMaterials/T_Default_Material_Grid_M
-MRUItem8=/Game/Meshes/SM_TrackerBot
-MRUItem9=/Game/Meshes/ArcadeEditorSphereScaled
-MRUItem10=/Game/UI/WBP_HealthIndicator
-MRUItem11=/Game/UI/WBP_AmmoInfo
-MRUItem12=/Game/Blueprints/Weapons/BP_Shotgun
-MRUItem13=/Game/Blueprints/GameModes/BP_TestGameMode
-MRUItem14=/Game/UI/WBP_SimpleCrosshair
-MRUItem15=/Game/Materials/M_ExplosiveBarrel
-MRUItem16=/Game/Materials/SM_ExplosiveBarrel
-MRUItem17=/Game/UI/M_HealthIndicator
-MRUItem18=/Game/UI/T_HealthMask
-MRUItem19=/Game/lessCineMat
+MRUItem0=/Game/TrackerBot/Sounds/Explosion01_Cue
+MRUItem1=/Game/TrackerBot/Sounds/explodewarning_Cue
+MRUItem2=/Game/TrackerBot/Sounds/TrackerBotAttenuation
+MRUItem3=/Game/TrackerBot/BP_TrackerBot
+MRUItem4=/Game/Blueprints/Characters/BP_PlayerPawn
+MRUItem5=/Game/Blueprints/Projectiles/BP_GrenadeProjectile
+MRUItem6=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
+MRUItem7=/Game/Blueprints/Weapons/BP_Rifle
+MRUItem8=/Game/Blueprints/AI/BP_TrackerBot
+MRUItem9=/Game/Meshes/AI/TrackerBot/M_TrackerBot
+MRUItem10=/Engine/EngineMaterials/T_Default_Material_Grid_M
+MRUItem11=/Game/Meshes/SM_TrackerBot
+MRUItem12=/Game/Meshes/ArcadeEditorSphereScaled
+MRUItem13=/Game/UI/WBP_HealthIndicator
+MRUItem14=/Game/UI/WBP_AmmoInfo
+MRUItem15=/Game/Blueprints/Weapons/BP_Shotgun
+MRUItem16=/Game/Blueprints/GameModes/BP_TestGameMode
+MRUItem17=/Game/UI/WBP_SimpleCrosshair
+MRUItem18=/Game/Materials/M_ExplosiveBarrel
+MRUItem19=/Game/Materials/SM_ExplosiveBarrel
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
@@ -3425,6 +3447,7 @@ MRUItem19=/Game/lessCineMat
 /Game/Meshes/ArcadeEditorSphereScaled.ArcadeEditorSphereScaled=0
 /Engine/EngineMaterials/T_Default_Material_Grid_M.T_Default_Material_Grid_M=0
 /Game/TrackerBot/BP_TrackerBot.BP_TrackerBot=0
+/Game/TrackerBot/Sounds/TrackerBotAttenuation.TrackerBotAttenuation=0
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
@@ -3466,7 +3489,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=EditorErrors
 
 [/Script/UnrealEd.CascadeOptions]
 ModuleColor_Beam_Unselected=(B=235,G=150,R=160,A=0)
