added rolling sound.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -3106,12 +3106,31 @@ SoundCue.Effects=True
 SoundCue.Priority=True
 SoundCue.Info=True
 SoundNodeWavePlayer.WavePlayer=True
+AudioComponent.Variable=True
+AudioComponent.TransformCommon=True
+AudioComponent.Sockets=True
+AudioComponent.Sound=True
+AudioComponent.Attenuation=True
+AudioComponent.Filter=True
+AudioComponent.Attachment=True
+AudioComponent.Modulation=True
+AudioComponent.AttenuationDistance=True
+AudioComponent.AttenuationSpatialization=True
+AudioComponent.Concurrency=True
+AudioComponent.AttenuationAirAbsorption=True
+AudioComponent.AttenuationListenerFocus=True
+AudioComponent.AttenuationOcclusion=True
+AudioComponent.Tags=True
+AudioComponent.ComponentReplication=True
+AudioComponent.Activation=True
+AudioComponent.Cooking=True
+AudioComponent.Events=True
 
 [AssetEditorManager]
 CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/TrackerBot/Sounds/explodewarning_Cue.explodewarning_Cue
-OpenAssetsAtExit=/Game/TrackerBot/Sounds/Explosion01_Cue.Explosion01_Cue
+OpenAssetsAtExit=/Game/TrackerBot/BP_TrackerBot.BP_TrackerBot
+OpenAssetsAtExit=/Game/TrackerBot/Sounds/ball_roll_04_loop_Cue.ball_roll_04_loop_Cue
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -3302,7 +3321,7 @@ SkeletalMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.B
 SkinnedMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
 MeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 PrimitiveComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
-SceneComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+SceneComponent=
 ActorComponent=
 ParticleModuleColorOverLife="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
 ParticleModuleColorBase="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
@@ -3378,26 +3397,26 @@ RecentlyPlaced=/Game/Weapons/Effects/BasicTracer/P_SmokeTrail.P_SmokeTrail;
 RecentlyPlaced=/Game/Blueprints/BP_TargetDummy.BP_TargetDummy;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/TrackerBot/Sounds/Explosion01_Cue
-MRUItem1=/Game/TrackerBot/Sounds/explodewarning_Cue
-MRUItem2=/Game/TrackerBot/Sounds/TrackerBotAttenuation
-MRUItem3=/Game/TrackerBot/BP_TrackerBot
-MRUItem4=/Game/Blueprints/Characters/BP_PlayerPawn
-MRUItem5=/Game/Blueprints/Projectiles/BP_GrenadeProjectile
-MRUItem6=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
-MRUItem7=/Game/Blueprints/Weapons/BP_Rifle
-MRUItem8=/Game/Blueprints/AI/BP_TrackerBot
-MRUItem9=/Game/Meshes/AI/TrackerBot/M_TrackerBot
-MRUItem10=/Engine/EngineMaterials/T_Default_Material_Grid_M
-MRUItem11=/Game/Meshes/SM_TrackerBot
-MRUItem12=/Game/Meshes/ArcadeEditorSphereScaled
-MRUItem13=/Game/UI/WBP_HealthIndicator
-MRUItem14=/Game/UI/WBP_AmmoInfo
-MRUItem15=/Game/Blueprints/Weapons/BP_Shotgun
-MRUItem16=/Game/Blueprints/GameModes/BP_TestGameMode
-MRUItem17=/Game/UI/WBP_SimpleCrosshair
-MRUItem18=/Game/Materials/M_ExplosiveBarrel
-MRUItem19=/Game/Materials/SM_ExplosiveBarrel
+MRUItem0=/Game/TrackerBot/Sounds/ball_roll_04_loop_Cue
+MRUItem1=/Game/TrackerBot/BP_TrackerBot
+MRUItem2=/Game/TrackerBot/Sounds/Explosion01_Cue
+MRUItem3=/Game/TrackerBot/Sounds/explodewarning_Cue
+MRUItem4=/Game/TrackerBot/Sounds/TrackerBotAttenuation
+MRUItem5=/Game/Blueprints/Characters/BP_PlayerPawn
+MRUItem6=/Game/Blueprints/Projectiles/BP_GrenadeProjectile
+MRUItem7=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
+MRUItem8=/Game/Blueprints/Weapons/BP_Rifle
+MRUItem9=/Game/Blueprints/AI/BP_TrackerBot
+MRUItem10=/Game/Meshes/AI/TrackerBot/M_TrackerBot
+MRUItem11=/Engine/EngineMaterials/T_Default_Material_Grid_M
+MRUItem12=/Game/Meshes/SM_TrackerBot
+MRUItem13=/Game/Meshes/ArcadeEditorSphereScaled
+MRUItem14=/Game/UI/WBP_HealthIndicator
+MRUItem15=/Game/UI/WBP_AmmoInfo
+MRUItem16=/Game/Blueprints/Weapons/BP_Shotgun
+MRUItem17=/Game/Blueprints/GameModes/BP_TestGameMode
+MRUItem18=/Game/UI/WBP_SimpleCrosshair
+MRUItem19=/Game/Materials/M_ExplosiveBarrel
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
@@ -3448,6 +3467,9 @@ MRUItem19=/Game/Materials/SM_ExplosiveBarrel
 /Engine/EngineMaterials/T_Default_Material_Grid_M.T_Default_Material_Grid_M=0
 /Game/TrackerBot/BP_TrackerBot.BP_TrackerBot=0
 /Game/TrackerBot/Sounds/TrackerBotAttenuation.TrackerBotAttenuation=0
+/Game/TrackerBot/Sounds/ball_roll_04_loop_Cue.ball_roll_04_loop_Cue=0
+/Game/TrackerBot/Sounds/Explosion01_Cue.Explosion01_Cue=0
+/Game/TrackerBot/Sounds/explodewarning_Cue.explodewarning_Cue=0
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
