recreated tracker's mesh collision. Now it's a simplified sphere.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -3131,6 +3131,7 @@ CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
 OpenAssetsAtExit=/Game/TrackerBot/BP_TrackerBot.BP_TrackerBot
 OpenAssetsAtExit=/Game/TrackerBot/Sounds/ball_roll_04_loop_Cue.ball_roll_04_loop_Cue
+OpenAssetsAtExit=/Game/TrackerBot/SM_TrackerBot.SM_TrackerBot
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -3397,26 +3398,26 @@ RecentlyPlaced=/Game/Weapons/Effects/BasicTracer/P_SmokeTrail.P_SmokeTrail;
 RecentlyPlaced=/Game/Blueprints/BP_TargetDummy.BP_TargetDummy;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/TrackerBot/Sounds/ball_roll_04_loop_Cue
-MRUItem1=/Game/TrackerBot/BP_TrackerBot
-MRUItem2=/Game/TrackerBot/Sounds/Explosion01_Cue
-MRUItem3=/Game/TrackerBot/Sounds/explodewarning_Cue
-MRUItem4=/Game/TrackerBot/Sounds/TrackerBotAttenuation
-MRUItem5=/Game/Blueprints/Characters/BP_PlayerPawn
-MRUItem6=/Game/Blueprints/Projectiles/BP_GrenadeProjectile
-MRUItem7=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
-MRUItem8=/Game/Blueprints/Weapons/BP_Rifle
-MRUItem9=/Game/Blueprints/AI/BP_TrackerBot
-MRUItem10=/Game/Meshes/AI/TrackerBot/M_TrackerBot
-MRUItem11=/Engine/EngineMaterials/T_Default_Material_Grid_M
-MRUItem12=/Game/Meshes/SM_TrackerBot
-MRUItem13=/Game/Meshes/ArcadeEditorSphereScaled
-MRUItem14=/Game/UI/WBP_HealthIndicator
-MRUItem15=/Game/UI/WBP_AmmoInfo
-MRUItem16=/Game/Blueprints/Weapons/BP_Shotgun
-MRUItem17=/Game/Blueprints/GameModes/BP_TestGameMode
-MRUItem18=/Game/UI/WBP_SimpleCrosshair
-MRUItem19=/Game/Materials/M_ExplosiveBarrel
+MRUItem0=/Game/TrackerBot/SM_TrackerBot
+MRUItem1=/Game/TrackerBot/Sounds/ball_roll_04_loop_Cue
+MRUItem2=/Game/TrackerBot/BP_TrackerBot
+MRUItem3=/Game/TrackerBot/Sounds/Explosion01_Cue
+MRUItem4=/Game/TrackerBot/Sounds/explodewarning_Cue
+MRUItem5=/Game/TrackerBot/Sounds/TrackerBotAttenuation
+MRUItem6=/Game/Blueprints/Characters/BP_PlayerPawn
+MRUItem7=/Game/Blueprints/Projectiles/BP_GrenadeProjectile
+MRUItem8=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
+MRUItem9=/Game/Blueprints/Weapons/BP_Rifle
+MRUItem10=/Game/Blueprints/AI/BP_TrackerBot
+MRUItem11=/Game/Meshes/AI/TrackerBot/M_TrackerBot
+MRUItem12=/Engine/EngineMaterials/T_Default_Material_Grid_M
+MRUItem13=/Game/Meshes/SM_TrackerBot
+MRUItem14=/Game/Meshes/ArcadeEditorSphereScaled
+MRUItem15=/Game/UI/WBP_HealthIndicator
+MRUItem16=/Game/UI/WBP_AmmoInfo
+MRUItem17=/Game/Blueprints/Weapons/BP_Shotgun
+MRUItem18=/Game/Blueprints/GameModes/BP_TestGameMode
+MRUItem19=/Game/UI/WBP_SimpleCrosshair
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
