Now ball changes rolling volume according to velocity (blueprint, will be done in C++ later).

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -3131,7 +3131,6 @@ CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
 OpenAssetsAtExit=/Game/TrackerBot/BP_TrackerBot.BP_TrackerBot
 OpenAssetsAtExit=/Game/TrackerBot/Sounds/ball_roll_04_loop_Cue.ball_roll_04_loop_Cue
-OpenAssetsAtExit=/Game/TrackerBot/SM_TrackerBot.SM_TrackerBot
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -3279,7 +3278,7 @@ TcpMessagingSettings=InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bi
 UdpMessagingSettings=InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRight,InputSettings.Bindings.AxisMappings.Crouch,InputSettings.Bindings.ActionMappings.Crouch,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.Zoom,InputSettings.Bindings.ActionMappings.Fire,
 WmfMediaSettings=InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRight,InputSettings.Bindings.AxisMappings.Crouch,InputSettings.Bindings.ActionMappings.Crouch,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.Zoom,InputSettings.Bindings.ActionMappings.Fire,
 BP_PlayerPawn_C=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,
-K2Node_VariableGet=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,
+K2Node_VariableGet=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,BP_TrackerBot_C.Physics.ConstraintsGroup,BP_TrackerBot_C.Rendering.TextureStreaming,BP_TrackerBot_C.Rendering.LOD,
 SkeletalMeshComponent=SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.TextureStreaming,SkeletalMeshComponent.Rendering.LOD,SkeletalMeshComponent.Collision.Collision,
 K2Node_VariableSet=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,
 ObjectProperty=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,
@@ -3298,7 +3297,7 @@ BP_ExplosiveBarrel_C=BP_ExplosiveBarrel_C.Collision.Collision,
 CapsuleComponent=CapsuleComponent.Collision.Collision,
 SphereComponent=SphereComponent.Collision.Collision,
 StaticMesh=StaticMesh.LOD0.MeshBuildSettings,
-BP_TrackerBot_C=BP_TrackerBot_C.Physics.ConstraintsGroup,BP_TrackerBot_C.Rendering.TextureStreaming,BP_TrackerBot_C.Rendering.LOD,
+BP_TrackerBot_C=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,BP_TrackerBot_C.Physics.ConstraintsGroup,BP_TrackerBot_C.Rendering.TextureStreaming,BP_TrackerBot_C.Rendering.LOD,
 NavigationPath=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,
 
 [DetailPropertyExpansion]
@@ -3471,6 +3470,7 @@ MRUItem19=/Game/UI/WBP_SimpleCrosshair
 /Game/TrackerBot/Sounds/ball_roll_04_loop_Cue.ball_roll_04_loop_Cue=0
 /Game/TrackerBot/Sounds/Explosion01_Cue.Explosion01_Cue=0
 /Game/TrackerBot/Sounds/explodewarning_Cue.explodewarning_Cue=0
+/Game/TrackerBot/SM_TrackerBot.SM_TrackerBot=0
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
