moved explosion sound to the explosion effect method.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -3127,7 +3127,7 @@ AudioComponent.Cooking=True
 AudioComponent.Events=True
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 OpenAssetsAtExit=/Game/TrackerBot/BP_TrackerBot.BP_TrackerBot
 OpenAssetsAtExit=/Game/TrackerBot/Sounds/ball_roll_04_loop_Cue.ball_roll_04_loop_Cue
@@ -3163,7 +3163,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/TrackerBot/Sounds
+ContentBrowserTab1.SelectedPaths=/Game/TrackerBot
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
