Adapted health component so tracker bot clients could be able to see health. Replicated tracker bot.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -27,6 +27,8 @@ MultipleInstancePositions=(X=315,Y=163)
 MultipleInstancePositions=(X=0,Y=0)
 MultipleInstancePositions=(X=672,Y=0)
 MultipleInstancePositions=(X=0,Y=512)
+LastExecutedPlayModeType=PlayMode_InEditorFloating
+PlayNumberOfClients=2
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 SnapToSurface=(bEnabled=False,SnapOffsetExtent=0.000000,bSnapRotation=True)
@@ -48,7 +50,7 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.25-15.01.56
+CoopGame.TimeStamp=2020.04.25-17.49.47
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -3129,8 +3131,6 @@ AudioComponent.Events=True
 [AssetEditorManager]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/TrackerBot/BP_TrackerBot.BP_TrackerBot
-OpenAssetsAtExit=/Game/TrackerBot/Sounds/ball_roll_04_loop_Cue.ball_roll_04_loop_Cue
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
